# vaserve

./: .gitignore  Cargo.toml  LICENSE  README-zh.md  README.md
.github/workflows/: publish.yml
src/: cli.rs  config.rs  handler.rs  lib.rs  main.rs  server.rs  templates.rs
testdata_0/subdir/: index.html
testdata_23/: hello world.txt
tests/: integration.rs
