[package]
name = "vaserve"
version = "14.2.4"
edition = "2021"
description = "Static file serving and directory listing - a Rust clone of vercel/serve"
license = "MIT"

[[bin]]
name = "serve"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5", features = ["util", "make"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "fs"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime_guess = "2"
sha1 = { version = "0.10", features = ["std"] }
local-ip-address = "0.6"
flate2 = "1"
bytesize = "1"
regex = "1"
url = "2"
http = "1"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls = "0.23"
bytes = "1"
futures-util = "0.3"

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
arboard = "3"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
http-body-util = "0.1"
